After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660382 - Fails to open files with spaces in their names
Fails to open files with spaces in their names
Status: RESOLVED FIXED
Product: gnome-documents
Classification: Core
Component: general
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME documents maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-09-28 17:11 UTC by Mantas Mikulėnas (grawity)
Modified: 2011-09-29 19:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mantas Mikulėnas (grawity) 2011-09-28 17:11:53 UTC
When I try to open an '.xls' document which has several spaces in its filename, gnome-documents splits the name at spaces before passing it to 'unoconv', resulting in something like:

argv[0] = unoconv
argv[1] = -f
argv[2] = pdf
argv[3] = -o
argv[4] = /home/grawity/.cache/gnome-documents/gnome-documents-1058851037.pdf
argv[5] = /home/grawity/Downloads/Nuolatiniu
argv[6] = rudens
argv[7] = semesnras
argv[8] = (4).xls

This obviously does not work, since unoconv tries to open a nonexistent file named ".../Nuolatiniu", while the real name is ".../Nuolatiniu rudens semensras (4).xls".

(gnome-documents 0.2.0)
Comment 1 Cosimo Cecchi 2011-09-29 19:27:04 UTC
Thanks for the report, I pushed a fix for this to git master and gnome-3-2.