pdf-loader: quote the file path before passing it to unoconv

This fixes unoconv crashing on files with spaces in their names.

https://bugzilla.gnome.org/show_bug.cgi?id=660382